feat: intergrate friends api
