# src/app/api/models/bill-detail.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+export interface BillDetail {
+  item_name: string;
+  item_price: string;
+}
